--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/Logo.png">
   
-  <title>Frontend Mentor | Age calculator app</title>
+  <title>Age calculator</title>
   <link rel="stylesheet" href="index.css">
 
 </head>
